# meson-clang

./: meson.build
include/: main.h
src/: main.c
